# Skillbox-Homework25-2

./: CMakeLists.txt
include/: cpu.h  disk.h  ram.h
src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
